--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RewriteEngine on
-RewriteCond $1 !^(index\.php)
-RewriteRule ^(.*)$ ./index.php/$1 [L]
+RewriteEngine On
+RewriteBase /Pellucid/
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
